fix: topic/select positioning on mobile

--- a/less/category.less
+++ b/less/category.less
@@ -47,13 +47,13 @@
 					top: 0px;
 					left: 0px;
 					border: 1px solid transparent;
+					background: white;
+					width: 100%;
+					height: 100%;
+					padding: 14px;
 
 					&:before {
 						.pointer;
-					}
-
-					@media (max-width: @screen-sm-max) {
-						padding: 7px;
 					}
 				}
 
